# KECENI

./: README.md  pyproject.toml
example/Appendix_D_2/: 01_generate_data.ipynb  02_run_aipw.ipynb  03_rep_aipw.ipynb
example/Appendix_D_3/: results_linear.ipynb
example/Appendix_D_4/: 01_generate_data.ipynb  02_run_keceni_kernel.ipynb  02_run_keceni_linear.ipynb  03_rep_autognet.ipynb  03_rep_autognet_R.ipynb  03_rep_keceni_kernel.ipynb  03_rep_keceni_linear.ipynb  03_rep_tmlenet.ipynb  result_autognet.feather  result_tmlenet.feather  run_kernel.py  run_kernel.slurm  run_linear.py  run_linear.slurm  true_model.py
example/Appendix_D_5/: 01_generate_data.ipynb  02_run_keceni_miss.ipynb  02_run_keceni_missmu.ipynb  02_run_keceni_misspi.ipynb  03_rep_keceni_miss.ipynb  03_rep_keceni_missmu.ipynb  03_rep_keceni_misspi.ipynb  03_rep_keceni_true.ipynb  run_miss.py  run_miss.slurm  run_missmu.py  run_missmu.slurm  run_misspi.py  run_misspi.slurm  run_true.py  run_true.slurm  true_model.py
example/Section_5_1/: 01_generate_data.ipynb  02_run_keceni.ipynb  03_rep_keceni.ipynb  hyperparams.py  run_keceni.py  run_keceni.slurm
example/Section_5_2/: 01_generate_data.ipynb  02_run_keceni_alpha.ipynb  03_rep_keceni_alpha.ipynb  hyperparams.py  run_alpha.py  run_alpha.slurm
example/Section_5_3/: 01_generate_data.ipynb  02_run_autognet.ipynb  02_run_keceni.ipynb  02_run_tmlenet.ipynb  03_rep_autognet.ipynb  03_rep_autognet_R.ipynb  03_rep_keceni.ipynb  03_rep_tmlenet.ipynb  03_rep_tmlenet_R.ipynb  augognet_functions.R  hyperparams.py  result_autognet.feather  run_keceni.py  (+2 more)
(+3893 files in other folders)
